# phasethree-todo

./: .env.example.bak  .gitignore  New Text Document.txt  README.md  mcp_runner.py  package-lock.json  setup_project.py  sp.constitution  sp.implement  sp.plan  sp.specify  sp.task  vercel.json
.specify/memory/: constitution.md
backend/: .env.example  alembic.ini  database.py  debug_agent.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  verify_tools.py
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/agents/: prompts.py  runner.py  sdk_mock.py
backend/app/api/: chat.py
backend/app/core/: auth.py  config.py  db.py
backend/app/models/: base.py  chat.py  task.py
backend/app/services/: history.py
backend/app/tools/: mcp_mock.py  mcp_server.py  tasks.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.css  Chat.tsx
history/prompts/ai-todo-chatbot/: 002-initial-spec-for-ai-todo-chatbot.spec.prompt.md  003-implementation-plan-for-ai-todo-chatbot.plan.prompt.md  004-task-generation-for-ai-todo-chatbot.tasks.prompt.md  005-implementation-of-ai-todo-chatbot.implement.prompt.md  006-futuristic-ui-overhaul.refactor.prompt.md  007-galaxy-ui-refinements.refactor.prompt.md  008-massive-pop-in-animation.refactor.prompt.md  009-scrolling-footer-marquee.refactor.prompt.md  (+3 more)
specs/: constitution.md  plan.md  specify.md  task.md
specs/1-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+18 files in other folders)
